--- a/Hextasy.XInARow/Hextasy.XInARow.csproj
+++ b/Hextasy.XInARow/Hextasy.XInARow.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="XInARowGame.cs" />
     <Compile Include="XInARowGameLogic.cs" />
+    <Compile Include="XInARowGameResultViewModel.cs" />
     <Compile Include="XInARowGameView.xaml.cs">
       <DependentUpon>XInARowGameView.xaml</DependentUpon>
     </Compile>
@@ -77,6 +78,7 @@
       <DependentUpon>XInARowSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="XInARowSettingsViewModel.cs" />
+    <Compile Include="XInARowStatistics.cs" />
     <Compile Include="XInARowTile.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
