replaced Caliburn.Micro.PropertyChangedBase with own INotifyPropertyChanged implementation because CM always notifies using Dispatcher

--- a/Hextasy.Framework/Hextasy.Framework.csproj
+++ b/Hextasy.Framework/Hextasy.Framework.csproj
@@ -79,6 +79,7 @@
     <Compile Include="IsNullConverter.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
+    <Compile Include="ObservableObject.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
