--- a/Hextasy.CardWarsViewer/Hextasy.CardWarsViewer.csproj
+++ b/Hextasy.CardWarsViewer/Hextasy.CardWarsViewer.csproj
@@ -120,6 +120,10 @@
       <Project>{ad3b527c-225a-4a10-a5f2-f86235ca1754}</Project>
       <Name>Hextasy.CardWars</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
+      <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
+      <Name>Hextasy.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
