--- a/Hextasy.Framework/Hextasy.Framework.csproj
+++ b/Hextasy.Framework/Hextasy.Framework.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ShowGameResultRequest.cs" />
     <Compile Include="ShowGameSelectionRequest.cs" />
     <Compile Include="Utils\DispatcherObservableCollection.cs" />
+    <Compile Include="Utils\SynchronizationSettings.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
