--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -585,7 +585,12 @@
   <ItemGroup>
     <Resource Include="Images\Cards\Monsters\HumanPriest31.PNG" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Presentation\DataTemplates\" />
+    <Folder Include="Presentation\Utils\" />
+    <Folder Include="Presentation\ViewModels\" />
+    <Folder Include="Presentation\Views\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Import Project="Fody.targets" />
