--- a/Hextasy.Villagers/Hextasy.Villagers.csproj
+++ b/Hextasy.Villagers/Hextasy.Villagers.csproj
@@ -81,6 +81,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
+    <Content Include="Images\Attribution.txt" />
+    <Resource Include="Images\food.png" />
+    <Resource Include="Images\stone.png" />
+    <Resource Include="Images\upgrade.png" />
+    <Resource Include="Images\water.png" />
     <Resource Include="Images\combo1.png" />
     <Resource Include="Images\combo2.png" />
     <Resource Include="Images\combo3.png" />
