--- a/Hextasy.Villagers/Hextasy.Villagers.csproj
+++ b/Hextasy.Villagers/Hextasy.Villagers.csproj
@@ -59,7 +59,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceType.cs" />
     <Compile Include="VillagersGame.cs" />
     <Compile Include="VillagersGameLogic.cs" />
     <Compile Include="VillagersGameResultViewModel.cs" />
@@ -82,6 +84,11 @@
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
     <Content Include="Images\Attribution.txt" />
+    <Resource Include="Images\wood1.png" />
+    <Resource Include="Images\wood2.png" />
+    <Resource Include="Images\wood3.png" />
+    <Resource Include="Images\wood4.png" />
+    <Resource Include="Images\wood5.png" />
     <Resource Include="Images\food.png" />
     <Resource Include="Images\stone.png" />
     <Resource Include="Images\upgrade.png" />
