--- a/Hextasy.MiningBot/Hextasy.MiningBot.csproj
+++ b/Hextasy.MiningBot/Hextasy.MiningBot.csproj
@@ -4,22 +4,20 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1A2186A-9020-4289-881B-2139A022ECC9}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{ED015B88-C70D-456F-88A5-0C9E75C70C63}</ProjectGuid>
+    <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hextasy</RootNamespace>
-    <AssemblyName>Hextasy</AssemblyName>
+    <RootNamespace>Hextasy.MiningBot</RootNamespace>
+    <AssemblyName>Hextasy.MiningBot</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <FodyPath>..\packages\Fody.1.20.0.0</FodyPath>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <FodyPath>..\packages\Fody.1.20.0.0</FodyPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -29,7 +27,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -37,15 +34,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Caliburn.Micro">
+    <Reference Include="Caliburn.Micro, Version=1.5.2.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Caliburn.Micro.1.5.2\lib\net45\Caliburn.Micro.dll</HintPath>
     </Reference>
-    <Reference Include="PropertyChanged, Version=1.46.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="PropertyChanged">
       <HintPath>..\packages\PropertyChanged.Fody.1.46.0.0\Lib\NET35\PropertyChanged.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -68,55 +62,23 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="GameResultShellView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="GameSelectionView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SettingsShellView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MainWindowView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="MiningBotGameView.xaml.cs">
+      <DependentUpon>MiningBotGameView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GameResultShellView.xaml.cs">
-      <DependentUpon>GameResultShellView.xaml</DependentUpon>
+    <Compile Include="MiningBotSettingsView.xaml.cs">
+      <DependentUpon>MiningBotSettingsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GameResultShellViewModel.cs" />
-    <Compile Include="GameSelected.cs" />
-    <Compile Include="GameSelectionView.xaml.cs">
-      <DependentUpon>GameSelectionView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GameSelectionViewModel.cs" />
-    <Compile Include="SettingsConfirmed.cs" />
-    <Compile Include="SettingsShellView.xaml.cs">
-      <DependentUpon>SettingsShellView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SettingsShellViewModel.cs" />
-    <Compile Include="MefBootstrapper.cs" />
-    <Compile Include="MainWindowView.xaml.cs">
-      <DependentUpon>MainWindowView.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="MiningBotGame.cs" />
+    <Compile Include="MiningBotGameLogic.cs" />
+    <Compile Include="MiningBotGameViewModel.cs" />
+    <Compile Include="MiningBotResultViewModel.cs" />
+    <Compile Include="MiningBotSettings.cs" />
+    <Compile Include="MiningBotSettingsViewModel.cs" />
+    <Compile Include="MiningBotStatistic.cs" />
+    <Compile Include="MiningBotTile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -143,52 +105,85 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Hextasy.CardWars\Hextasy.CardWars.csproj">
-      <Project>{ad3b527c-225a-4a10-a5f2-f86235ca1754}</Project>
-      <Name>Hextasy.CardWars</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.Halma\Hextasy.Halma.csproj">
-      <Project>{b6fcd5dc-e9f4-466e-9a32-b2fb69f15f4c}</Project>
-      <Name>Hextasy.Halma</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.JumpToKill\Hextasy.JumpToKill.csproj">
-      <Project>{f3e4c333-cb73-444f-8640-517c96d76db2}</Project>
-      <Name>Hextasy.JumpToKill</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.LightsOff\Hextasy.LightsOff.csproj">
-      <Project>{4ddaf828-7805-4e58-9596-8c935c638175}</Project>
-      <Name>Hextasy.LightsOff</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.MiningBot\Hextasy.MiningBot.csproj">
-      <Project>{ed015b88-c70d-456f-88a5-0c9e75c70c63}</Project>
-      <Name>Hextasy.MiningBot</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.Trains\Hextasy.Trains.csproj">
-      <Project>{8ad4738d-0fc5-4b1f-ab22-9f3d0ec379a9}</Project>
-      <Name>Hextasy.Trains</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.Villagers\Hextasy.Villagers.csproj">
-      <Project>{1317e798-00ca-43e5-98a9-5859fcb059fa}</Project>
-      <Name>Hextasy.Villagers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.XInARow\Hextasy.XInARow.csproj">
-      <Project>{a30347e1-ea0e-4945-a50a-98f37bfd79b2}</Project>
-      <Name>Hextasy.XInARow</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
       <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
       <Name>Hextasy.Framework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="MiningBotGameView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MiningBotSettingsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\ball-blue.png" />
+    <Resource Include="Images\ball-green.png" />
+    <Resource Include="Images\ball-magenta.png" />
+    <Resource Include="Images\beach.png" />
+    <Resource Include="Images\beach-n-ne-se-s-sw-nw.png" />
+    <Resource Include="Images\beach-n-ne.png" />
+    <Resource Include="Images\beach-n.png" />
+    <Resource Include="Images\beach-ne-se.png" />
+    <Resource Include="Images\beach-ne.png" />
+    <Resource Include="Images\beach-nw-n.png" />
+    <Resource Include="Images\beach-nw.png" />
+    <Resource Include="Images\beach-s-sw.png" />
+    <Resource Include="Images\beach-s.png" />
+    <Resource Include="Images\beach-se-s.png" />
+    <Resource Include="Images\beach-se.png" />
+    <Resource Include="Images\beach-sw-nw.png" />
+    <Resource Include="Images\beach-sw.png" />
+    <Resource Include="Images\beach2.png" />
+    <Resource Include="Images\beach3.png" />
+    <Resource Include="Images\beach4.png" />
+    <Resource Include="Images\beach5.png" />
+    <Resource Include="Images\beach6.png" />
+    <Resource Include="Images\bomb.png" />
+    <Resource Include="Images\bones.png" />
+    <Resource Include="Images\earthy-floor.png" />
+    <Resource Include="Images\earthy-floor2.png" />
+    <Resource Include="Images\earthy-floor3.png" />
+    <Resource Include="Images\earthy-floor4.png" />
+    <Resource Include="Images\earthy-floor5.png" />
+    <Resource Include="Images\earthy-floor6.png" />
+    <Resource Include="Images\floor-n-ne.png" />
+    <Resource Include="Images\floor-n.png" />
+    <Resource Include="Images\floor-ne-se.png" />
+    <Resource Include="Images\floor-ne.png" />
+    <Resource Include="Images\floor-nw-n.png" />
+    <Resource Include="Images\floor-nw.png" />
+    <Resource Include="Images\floor-s-sw.png" />
+    <Resource Include="Images\floor-s.png" />
+    <Resource Include="Images\floor-se-s.png" />
+    <Resource Include="Images\floor-se.png" />
+    <Resource Include="Images\floor-sw-nw.png" />
+    <Resource Include="Images\floor-sw.png" />
+    <Resource Include="Images\floor.png" />
+    <Resource Include="Images\floor2.png" />
+    <Resource Include="Images\floor3.png" />
+    <Resource Include="Images\floor4.png" />
+    <Resource Include="Images\floor5.png" />
+    <Resource Include="Images\floor6.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\empty.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <Import Project="Fody.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
