--- a/Hextasy.Framework/packages.config
+++ b/Hextasy.Framework/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Caliburn.Micro" version="1.5.2" targetFramework="net451" />
-  <package id="Fody" version="1.20.0.0" targetFramework="net451" developmentDependency="true" />
-  <package id="PropertyChanged.Fody" version="1.46.0.0" targetFramework="net451" developmentDependency="true" />
+  <package id="Caliburn.Micro" version="1.5.2" targetFramework="net451" userInstalled="true" />
+  <package id="Fody" version="1.28.3" targetFramework="net451" userInstalled="true" />
+  <package id="PropertyChanged.Fody" version="1.50.1" targetFramework="net451" developmentDependency="true" userInstalled="true" />
 </packages>
