--- a/Hextasy.Test/packages.config
+++ b/Hextasy.Test/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="xunit" version="1.9.2" targetFramework="net451" />
+  <package id="Fody" version="1.28.3" targetFramework="net451" userInstalled="true" />
+  <package id="PropertyChanged.Fody" version="1.50.1" targetFramework="net451" userInstalled="true" developmentDependency="true" />
+  <package id="xunit" version="1.9.2" targetFramework="net451" userInstalled="true" />
 </packages>
