--- a/Hextasy/Hextasy.csproj
+++ b/Hextasy/Hextasy.csproj
@@ -181,6 +181,10 @@
       <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
       <Name>Hextasy.Framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Hextasy.Yinsh\Hextasy.Yinsh.csproj">
+      <Project>{19deef9f-5152-40b9-a387-9e5f1edad863}</Project>
+      <Name>Hextasy.Yinsh</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
