--- a/Hextasy.Yinsh/Hextasy.Yinsh.csproj
+++ b/Hextasy.Yinsh/Hextasy.Yinsh.csproj
@@ -62,7 +62,12 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CpuPlayer.cs" />
+    <Compile Include="Disc.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="PlayerColor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ring.cs" />
     <Compile Include="YinshGame.cs" />
     <Compile Include="YinshGameLogic.cs" />
     <Compile Include="YinshGameResultViewModel.cs" />
